--- a/APSTA-GE-2011-Proj2.ipynb
+++ b/APSTA-GE-2011-Proj2.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Whether a user will make online purchase or not?"
+    "# Whether a user will make online purchase or not: A comparison study among logistic regression, Naive Bayes and Random Forest with Cross-Validation” "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Online Shoppers Purchasing Intention Dataset was accessed from the UC Irvine Machine Learning Repository. The dataset consists of 12,330 sessions, each from a different user in a 1-year period, and 18 attributes (10 numerical and 8 categorical). \n",
+    "\n",
+    "The numerical features include different types of pages that users visited and their respective visit durations: Administrative (account management), Informational (about the website and communication), and Product related (about products). They also contain information on Bounce Rate and Exit Rate. The former refers to the percentage of visitors who enter the site from that page and then leave (\"bounce\") without triggering any actions, and the latter refers to the percentage that were the last in a session for a specific webpage among the total pages viewed. The Page value variable is a Google Analytics measure of the average page value of a webpage. There is also a Special day variable indicating the closeness of the site visiting time to a special day (i.e. holiday). \n",
+    "\n",
+    "The categorical data include variables of Operating Systems, Browser types, and Region (geographic). There are also Traffic Type, which include the sources that visitors used to arrive at the webpage, and Visitor Type: new, returning users, or other type. As for timing, there are also Month of visit and Weekend (whether the visit was on a weekend or not). More importantly, there is also Revenue to determine whether the user’s visit finished with a purchase (transaction) or not. We will use this Revenue variable as our target to determine user intention. \n",
+    "\n",
+    "The model was developed as a binary classification problem across measurements on various categorical and numerical variables. In our study, we wished to design a model to accurately predict users’ intention to complete online purchases. There are two main objectives. Objective 1 is method performance comparison: logistic regression (LR), Naive Bayes (NB), Support Vector Machine (SVM) and Random Forest (RF) in terms of accuracy (predict user intention) and AUC (area under the curve). Sensitivity and specificity were also compared, as some methods may have more false positives or false negatives. Objective 2 is to assess the potential impact of a pre-processing phase in which skewed predictors are transformed using the logarithmic transformation (and possibly principal components) by re-assessing the above machine learning techniques’ accuracy (and sensitivity and specificity) on the same feature set, but transformed first, as deemed necessary to remove skew. \n"
    ]
   },
   {
@@ -784,7 +797,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Data pre-processing is necessary to correct any problems in the data before using it to build a machine learning model. After checking for missing values, which was none for all variables, the first data pre-processing step we took was to create dummy variables for the categorical values and combine these dummy variables into one. All of our categorical values are important for our regression and our tests so we decided to use all of them. The best way to do this was to create one dummy variable that incorporates all of these categorical values. We also converted the boolean values in our dataset into numerical ones (Revenue and Weekend). Revenue is the main value we are testing for because that is the data category that will show us whether or not someone has made an online purchase or not. These values were turned numerical to make any regression possible for our later tests. We also standardized our data by taking the z-score of all features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### One Hot Coding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We decided to log transform our data because the original marginal distributions of our continuous variables were heavily right-skewed (except for Special day variable). Outliers may negatively affect a model’s performance, especially for logistic regression models. If there are 0’s in the data, a positive value is added before taking the log because log(0) is undefined and we do not want missing values to occur. When we did our log transformations, we had to be very specific with each continuous variable. This is because the addition of 1 to one variable would have completely different effects than an addition of 1 to another variable. That is why you will see in the code that each variable had a different transformation value. Some values had an addition of 1 or 5, while others had an addition of less than 1. This log transformation did normalize some of our continuous variables; however, there are some variables that were still skewed to the right. Also, some variables had plots that looked multimodal. Due to this fact, we decided to run a cross-validation test, through various methods, on both the original scale and the log-transformed scale. We did this to see whether there would be a major difference or not and if there is a major difference, we wanted to see which scale provided better accuracy results in our confusion matrix for each method. "
    ]
   },
   {
@@ -963,7 +990,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "70% as training set and 30% as testing set."
+    "We split the data into 70% as training set and 30% as testing set."
    ]
   },
   {
@@ -1004,6 +1031,17 @@
    "metadata": {},
    "source": [
     "## 3. Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since our project is a binary classification problem, we started with logistic regression (LR). It is a simple and fast classification algorithm and it frames binary output model. The output not only can be a probability (0 ≤ x ≤ 1), but could be used to predict the binary 0 or 1 as the output (by thresholding if p > 0.5). In our case, it predicted the binary result of being an online shopper or not. \n",
+    "\n",
+    "Except for Naive Bayes, which lacks hyperparameters to tune, each model was tuned using 90/10 cross-validation (10-fold) within the 70% training set and then evaluated on the 30% test set. The purpose of cross-validation (CV) is to prevent overfitting the data and producing poor classifiers. Tuning (CV) was done to choose the optimal parameters of the model and improve classification. We used 10-fold, meaning that the 70% training set was randomly partitioned into 10 equal portions. Each portion was withheld once and the remaining data of the training set was used to fit the model before classifying on the withheld portion. The optimal model for each method was then tested on the 30% test set.\n",
+    "\n",
+    "We produced the confusion matrix comparing our withheld data from the initial 70/30 training/test split with the predictions from each model. We have a total of 9 confusion matrices, one for each of our methods: logistic regression (LR), LR with log transformation, Support Vector Machine (SVM), SVM with log transformation, Random Forest (RF), RF with log transformation, Naive Bayes (NB), NB with log transformation, and NB with principal components of log-transformed data. \n"
    ]
   },
   {
@@ -1172,6 +1210,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, LR requires many assumptions, including the logit transform being appropriate and the impact of covariates (to the log-odds) being a linear sum. We also implemented SVM model, which supports both linear and nonlinear models and can handle outliers as well. SVM does not require independence among features. \n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -1329,6 +1375,13 @@
    "metadata": {},
    "source": [
     "## 5. Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We applied Random Forest (RF) for our prediction as well. Single decision trees are helpful in forming branches to identify homogeneous subsets in a heterogeneous population. It is advantageous as it has no need for pre-processing of data and has few modeling assumptions. More importantly, simple trees offer more understandable explanation over predictive models graphically. RF is a collection of decision trees, and the average result of RF is chosen as the predicted output. While not as simple to describe the decision rule/tree, RF is more robust and reduces the chances of overfitting compared to simple, single decision trees.\n"
    ]
   },
   {
@@ -1492,6 +1545,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We also implemented Naive Bayes (NB). NB assumes independence among features for the approximation to the joint distribution.\n",
+    "\n",
     "We don't use cross-validation to tune NB because there is no hyperparameters in NB to tune."
    ]
   },
@@ -1638,14 +1693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NB is not good. Things are even worse on log data!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The NB performance is bad probably because the features are not independent. Let's try to do PCA on log-transformed data and then apply NB."
+    "We also ran principal components analysis (PCA) prior of Naive Bayes method, and this was due to the fact that our confusion matrices resulting from the Naive Bayes method had very low accuracy. More importantly, NB requires independence between variables within a dataset. This independence assumption adds some limitations to the analysis as the feathers are not independent from each other. As shown in Figure 3, there are strong correlations between some of the numerical variables.  PCA creates orthogonal vectors making variables uncorrelated by their data, therefore improve independence. Hence, we applied PCA to log-transformed data to investigate whether it would improve NB accuracy. "
    ]
   },
   {
@@ -1668,7 +1716,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1739,6 +1789,19 @@
    "source": [
     "PCA on log-transformed data does improve the NB performance!!!\n",
     "The reason why it did badly might be the independency between features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy (% correct) is a value of high importance because it is the success rate of the tuned model’s classification on the 30% testing set. By comparing the accuracy percentages, we can tell which classification model fits the most with our withheld data. Then, we can use this model to see how many people in our dataset fit into 0 in Revenue and how many people fit into 1 in Revenue. The people in Revenue = 1 are those who make an online transaction (purchase). Every model gave us an accuracy within the range of 0.87 and 0.9, other than NB and NB with log transformation. This was due to the lack of independence of the features. When we used the NB method on principal components, we got an accuracy within the range of 0.87 and 0.9 as well. \n",
+    "\n",
+    "The sensitivity value, also known as the True Positive Rate, is a measure of how often the prediction is correct if the actual value is positive (Revenue = 1). All of the methods have a sensitivity value between 0.64 and 0.77, except for the NB model (0.181) and the NB model with log transformation (0.169). The specificity value, also known as the True Negative Rate, is a measure of how often the prediction is correct if the actual value is negative (Revenue = 0). The NB model and the NB model with log transformation have the highest specificity values (0.990 and 0.991, respectively). The other models have specificity values between 0.52 and 0.66, except for SVM, which has the lowest specificity value (0.377).\n",
+    "\n",
+    "All of these values are important when we assess our predictions, but the value that we considered the most important when comparing each model is the AUC. If the AUC value is higher, that means the model is better at distinguishing the positive and negative values (predicting 0’s as 0’s and 1’s as 1’s). Most of the AUC values are between 0.74 and 0.79; however, the NB model and the NB model with log transformation have very low values of AUC. The classification method with the worst performance was the NB model with log transformation since it had both the lowest AUC value (0.505) and the lowest accuracy value (0.183). On the other hand, the logistic regression on the original scale was considered to be the classification method with the best performance, given that it had the highest AUC value (0.789) and a very high accuracy value (0.881). \n",
+    "\n",
+    "Except for NB model, log transformation generally improved other predictive model performances across all measures. Comparing logged transformed results, RF showed the best performance demonstrating the model robustness and resistance to overfitting issue. On the other hand, the less ideal performance of NB showed how important feature independence is for that model. Additionally, the improved NB measures showed how PCA can improve its performance. "
    ]
   }
  ],
